<resources>
    <string name="join_shop">Shop</string>
    <string name="join_carttt">Cart</string>
	<string name="join_homeeee">Home</string>
	<string name="join_Delivery">Delivery</string>
		<string name="join_Moreee">More</string>
	<string name="join_ordersss">Once you have completed order,you can easily shop from your previous Orders, listed here.</string>
	<string name="join_loginin">Login in to your Account</string>
	<string name="join_cstep3">Checkout: Step 3</string>
    <string name="app_name">Grocery</string>
    <string name="join_shoppingcartempty">Your shopping cart is empty.</string>
    <string name="join_shopclick">Click Shop below to find foods you ll love.</string>
    <string name="join_appchek1">Checkout: Step1</string>
    <string name="join_pickupm">PICK UP</string>
    <string name="join_minimorder">(minimum order $30):</string>
    <string name="join_plschosedeliver">Please choose a delivery address:</string>
    <string name="join_longisland">Long Island</string>
    <string name="join_bordenave">23-30 Borden Ave\n Long Island City, NY 11101</string>
    <string name="join_dahi">Mama Francesca Grated Pecorino Romano Cheese, Imported</string>
    <string name="join_dahidoz">5oz</string>
    <string name="join_deliverypass">Delivery Pass Terms And Conditions</string>
    <string name="join_dahicost">$3.99/ea</string>
    <string name="join_step2">Step 2</string>
    <string name="join_remmemberyouwill">Remember, you will not be charged until we have prepared your order and it is ready for delivery.</string>
    <string name="join_estement">Estimated Total: $70.66</string>
    <string name="join_plschoosepaymt">Please choose payment option</string>
    <string name="join_step4">Step 4</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="email">Email</string>
    <string name="join_custagree">Customer Agreement</string>
    <string name="join_savaddr">Save Address Info</string>
    <string name="join_plsmakesure">(please make sure doorman will accept packages)</string>
    <string name="join_leavedoorman">Leave with doorman</string>
    <string name="join_specialdeliver">Special Delivery Instruction</string>
    <string name="join_phone">Phone</string>
    <string name="join_yes">Yes</string>
    <string name="join_no">No</string>
    <string name="join_step3">Step 3</string>
    <string name="join_addcrdc">Add a credit card</string>
    <string name="join_addadr">Add New Payment</string>
    <string name="join_cardtyp">Card Type</string>
    <string name="join_carno">Card Number</string>
    <string name="join_zip">Zip</string>
    <string name="join_registering">By registering, you agree to the </string>
    <string name="join_termof_use">Terms of Use</string>
    <string name="join_savpay">Save Payment Info</string>
    <string name="join_apt">Apt.#</string>
    <string name="join_expire">Expires</string>
    <string name="join_amex">Amex</string>
    <string name="join_plsentr">Please enter credit card details.</string>
    <string name="join_compnay">Compnay</string>
    <string name="join_street">Street</string>
    <string name="join_back">Back</string>
    <string name="join_apex">Apex</string>
    <string name="join_creditcard">Credit Card</string>
    <string name="join_mastercard">Mastercard</string>
    <string name="join_visa">Visa</string>
    <string name="join_city">City</string>
    <string name="join_stat">State</string>
    <string name="join_discover">Discovered</string>
    <string name="join_newyrk">New York</string>
    <string name="join_plsentrnewaddr">Please enter a new address:</string>
    <string name="join_step">Step 1</string>
    <string name="join_addnewaddr">Add New Address</string>
    <string name="join_homdel">Home Delivery</string>
    <string name="join_corporatdel">Corporate Delivery</string>
    <string name="join_deliverytime">Delivery Time Status</string>
    <string name="join_orderdetails">Order # not specified</string>
    <string name="join_generallyrepons">We generally response within 1 to 3 hours during our business day.</string>
    <string name="join_thanks">Thank you for you sending us your message:</string>
    <string name="join_ok">Ok</string>
    <string name="join_select">Select Subject</string>
    <string name="join_writemsg">Write Your Message.....</string>
    <string name="join_requi">REQUIRED</string>
    <string name="join_sendSms2">Send Message </string>
    <string name="join_optional">OPTIONAL</string>
    <string name="join_sendmesg">Send Us a Message</string>
    <string name="join_chef">Chef s Table Only</string>
    <string name="mpaersent">Order #</string>
    <string name="join_chef1">Alcohol Restricated</string>
    <string name="join_chef2">Eco-Friendly Timeslot</string>
    <string name="join_chef3">Peak Hours Order Minimum</string>
    <string name="join_chef4">Reserved Timeslot</string>
    <string name="join_chef5">Preselected Timeslot</string>
    <string name="join_chef6">Delivery Slot Full</string>
    <string name="join_mobileapp">Mobile Apps</string>
    <string name="join_cont">Contact</string>
    <string name="join_freshdirectcust">FreshDirect Customer Service is standing by to answer your questions, seven days a week. We generally respond within 1 to 3 hours during our business day.</string>
    <string name="join_pleaseinclu">Please include as much specific information as possible to ensure a prompt response to your inquiry.</string>
    <string name="join_delivert">Delivery times available at checkout only, to this address:</string>
    <string name="join_reserv">Reserve Delivery</string>
    <string name="join_subject">Subject</string>
    <string name="join_nowor">No Worries.</string>
    <string name="join_wiwill">We ll email you a link to retrive a password.</string>
    <string name="join_fpass">Forgot Password?</string>
    <string name="join_sendr">Send Request</string>
    <string name="join_priva">Privacy Policy</string>
    <string name="join_more">More</string>
    <string name="join_info">Grocery Customer Service is standing by to answer your questions, seven days a week. We generally respond within 1 to 3 hours our during business day.</string>
    <string name="join_signup">Sign up</string>
    <string name="join_firstname">First Name</string>
    <string name="join_donth">You Dont Have Any Previous Orders</string>
    <string name="join_requite">Required</string>
    <string name="join_callus">Call Us: 1-212-796-8002</string>
    <string name="join_montosun">Monday Through Sunday</string>
    <string name="join_times">6:AM to 12:30Am</string>
    <string name="join_custser">Customer Service Hours:</string>
    <string name="join_sendsms">Send Us a Message</string>
    <string name="join_lastname">Last Name</string>
    <string name="join_addcar">Add to cart</string>
    <string name="join_newgro">New to Grocery?</string>
    <string name="join_email">Email</string>
    <string name="join_logout">Logout</string>
    <string name="join_help">Help</string>
    <string name="join_about">About</string>
    <string name="join_order">Your Orders</string>
    <string name="join_confirm">Confirm Email</string>
    <string name="join_pass">Password</string>
    <string name="join_ans">Answer</string>
    <string name="join_terms">By registering, you agree to the </string>
    <string name="join_term">Terms of Use</string>
    <string name="join_startshopi">Start Shopping</string>
    <string name="join_what">What is your town of birth or mother s maiden name?</string>
    <string name="join_sques">Security Question</string>
    <string name="join_notify">Notify Me</string>
    <string name="join_frui">Fruis</string>
    <string name="join_search">Search</string>
    <string name="password">Password</string>
    <string name="join_youcanplace">You can place your order for pickup at our Long Island </string>
    <string name="forgot_password"> Forgot your password?</string>
    <string name="join_startshop">Start Shopping For Pickup</string>
    <string name="join_cityfaci">City facility (Just minutes from Manhatan.)</string>
    <string name="join_homedeli">Home Delivery</string>
    <string name="join_addresstype">Address Type</string>
    <string name="new_to_grocery">New to grocery</string>
    <string name="first_order">YOUR FIRST 2 ORDERS</string>
    <string name="enter_code">Enter Promo Code :</string>
    <string name="buy_20">BUY 20</string>
    <string name="zipcode">Zip Code</string>
    <string name="checkout">at checkout</string>
    <string name="long_island">Long Island City Picup</string>
    <string name="notify_email">Notify Me Vai Email</string>
    <string name="email_me">Email me when you begin delivery to my area.</string>
    <string name="zipcodenotify_txt">Sorry, we curruntly do not deliver to your neighboiurhood.</string>
    <string name="enterzipcodetxt">Enter zip code to see if we deliver to your neighbourhood.</string>
    <string name="sear">Search</string>
    <string name="welcome">Welcome back, Shalu!</string>
    <string name="browse">Browse Our Store</string>
    <string name="favrote">FAVORITES</string>
    <string name="grocery">Grocery Favorites</string>
    <string name="organic">Organic Hass\nAvocados\nReady-to-Eat</string>
    <string name="asparagus">Asparagus</string>
    <string name="gro_roast">Grocery\nRoast Beef</string>
    <string name="pre_pics">President’s Pics</string>
    <string name="dollar1">$5.99/ea</string>
    <string name="dollar2">$4.49/ea</string>
    <string name="dollar3">$12.99/lb</string>
     <string name="join_wehavepart">we ve part with some of  your fovorties brands to
 bring your even more great savinf across the store</string>
    <string name="join_saveo">SAVE BIG ON TOP PRODUCTS NEW * NEW EVERY WEEK</string>
	<string name="join_president">PRESIDENT S PICK</string>
	<string name="join_faq">FAQ &#38; Support</string>
	<string name="join_saveon">save up to 505 on some of our best product</string>
    <string-array name="ItemsImages">
        <item>@drawable/home_img3</item>
        <item>@drawable/home_img2</item>
        <item>@drawable/home_img1</item>
    </string-array>
    <string-array name="about">
        <item>App Version</item>
        <item >V2.4</item>
        <item>Android Generation</item>
        <item> condor_umtsds</item>
        <item>Android OS</item>
        <item>4.4.4</item>
        <item>Unit ID</item>
        <item>35930159428093</item>
    </string-array>
    <string-array name="subcrd">
        <item>Apex</item>
        <item>Mastercard</item>
        <item>Visa</item>
        <item>Discovered</item>
    </string-array>
    <string-array name="faq">
        <item>Mobile Apps</item>
        <item>What We Do</item>
        <item>Security and Privacy</item>
        <item>Shopping</item>
        <item>Payment</item>
        <item>Home Delivery</item>
        <item>FDCoupons</item>
        <item>DeliveryPass</item>
        <item>Chef s Table</item>
        <item>SMS Text-Message</item>
        <item>Sustainable Seafood</item>
        <item>Business &#38; Corporate Customers</item>
    </string-array>
    <string-array name="subject">
        <item>Billing</item>
        <item>Corporate/Commercial\nServices</item>
		<item>Delivery Areas</item>
		<item>Delivery Feedback</item>
		<item>Delivery Time Status</item>
		<item>FreshDirect IPhone app</item>
		<item>General Feedback</item>
		<item>Gift Cards</item>
		<item>Problem with an order I\ received</item>
		<item>Product Request</item>
		<item>Promotion</item>
		<item>Web Site/Technical</item>
		</string-array>
    <string name="join_estimate">Estimated Total: $29.99</string>
</resources>