<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg" >
    
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:background="@color/black"
        >
        <TextView 
            android:id="@+id/imv_EditZip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/join_step2"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_alignParentLeft="true"           
            android:background="@drawable/login_small_button_bg"
            android:contentDescription="@string/app_name"/>
        <TextView
            android:id="@+id/tvsingup"
            android:layout_width="wrap_content"
            android:layout_centerInParent="true"
            android:layout_height="wrap_content"
            android:text="@string/join_cstep3"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceLarge"
            />
        <ImageView 
            android:id="@+id/plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:padding="12dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/plus_btn"/>
    </RelativeLayout>
    <TextView
            android:id="@+id/tvEstimate"
            android:layout_width="match_parent"
            android:background="@color/dark_grayrect"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:padding="10dp"
            android:text="@string/join_estimate"
            android:textColor="@color/white" />
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:weightSum="4">
        <TextView
            android:id="@+id/tv_Step1"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:text="@string/join_step"
            android:layout_weight="1"
            />
        <TextView
            android:id="@+id/tv_Step2"
             android:gravity="center"
             android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/join_step2"
            android:layout_weight="1"
            />
        <TextView
            android:id="@+id/tv_Step3"
             android:gravity="center"
             android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/join_step3"
            android:layout_weight="1"
            />
        <TextView
            android:id="@+id/tv_Step4"
             android:gravity="center"
             android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/join_step4"
            android:layout_weight="1"
            />
        
    </LinearLayout>
    <TextView
        android:id="@+id/height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/join_plschoosepaymt"
        />
    <TextView
        android:id="@+id/rem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/join_remmemberyouwill"
        />
    <TextView
        android:id="@+id/estimat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/join_estement"
        />
    <RelativeLayout 
        android:id="@+id/rrrrrr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       android:layout_marginLeft="10dp"
       android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        
        android:background="@color/white"
        >
             
        <ImageView 
            android:id="@+id/cirplus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:padding="10dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/plus_circle_btn"/>
           
        <TextView
            android:id="@+id/tv_addadres"
            android:layout_toRightOf="@+id/cirplus"
            android:layout_margin="10dp"
             android:gravity="center"
             android:textStyle="bold"
             android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/join_addnewaddr"
           
            />
        <ImageView 
            android:id="@+id/arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:padding="10dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/orange_arrow"/>
            
        
    </RelativeLayout>
    <ImageView 
            android:id="@+id/truck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           
            android:layout_marginTop="25dp"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            android:src="@drawable/truck_img2"/>

</LinearLayout>
