<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="15dp"
    android:gravity="center"
    android:layout_marginRight="15dp"
    android:background="#FFFFFF"
    android:orientation="horizontal"
    android:padding="20dp"
     android:baselineAligned="false">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/img_home3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/home_img3" 
            android:contentDescription="@string/app_name"/>

        <TextView
            android:id="@+id/tv_organic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:gravity="center_horizontal"
            android:text="@string/organic" />

        <TextView
            android:id="@+id/tvDolar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/dollar1"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/dollar_c" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/img_home2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15sp"
            android:src="@drawable/home_img2" 
            android:contentDescription="@string/app_name"/>

        <TextView
            android:id="@+id/tv_asparagus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:gravity="center_horizontal"
            android:text="@string/asparagus" />

        <TextView
            android:id="@+id/tvDolar1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:gravity="center_horizontal"
            android:text="@string/dollar2"
            android:textColor="@color/dollar_c" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/img_home1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15sp"
            android:src="@drawable/home_img1" 
            android:contentDescription="@string/app_name"/>

        <TextView
            android:id="@+id/tv_roast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:gravity="center_horizontal"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/gro_roast" />

        <TextView
            android:id="@+id/tvDolar3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/dollar3" />
    </LinearLayout>

</LinearLayout>